salesforce/force-app/main/default/objects/Account/fields/CCO_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>CCO_Contact_Email__c</fullName>
    <label>CCO Contact Email</label>
    <type>Email</type>
</CustomField>