salesforce/force-app/main/default/objects/Account/fields/CCO_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>CCO_Contact_Name__c</fullName>
    <label>CCO Contact Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>