salesforce/force-app/main/default/objects/Account/fields/CCO_Member_Since__c.field-meta.xml
<CustomField>
    <fullName>CCO_Member_Since__c</fullName>
    <label>CCO Member Since</label>
    <type>Date</type>
</CustomField>