salesforce/force-app/main/default/objects/Account/fields/CCO_Mission__c.field-meta.xml
<CustomField>
    <fullName>CCO_Mission__c</fullName>
    <label>CCO Mission / Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>