salesforce/force-app/main/default/objects/Account/fields/CCO_Status__c.field-meta.xml
<CustomField>
    <fullName>CCO_Status__c</fullName>
    <label>CCO Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>