salesforce/force-app/main/default/objects/Account/fields/Monday_Board_Id__c.field-meta.xml
<CustomField>
    <fullName>Monday_Board_Id__c</fullName>
    <label>Monday Board ID</label>
    <type>Text</type>
    <length>20</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>